--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,6 +1,6 @@
 
 
 <div class="contenedor">
-	<%= link_to "Mi Blog", posts_path %>
-	<%= link_to "Usuarios", users_path %>
+	<%= link_to "- - Mi Blog - -", posts_path %>
+	<%= link_to "- - Usuarios - -", users_path %>
 </div>
